<resources>
    <string name="app_name">Shopper</string>
    <string name="fragment.add.hint">상품을 입력해주세요!</string>
    <string name="total_formatted">상품 갯수: %s | 가격: %s</string>
    <string name="done">완료</string>
    <string name="enter_item_name">상품 이름을 입력해주세요.</string>
    <string name="dialog_edit_title">상품 수정</string>
    <string name="dialog_edit_name">변경할 이름을 입력해주세요.</string>
    <string name="close">닫기</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="dialog_enter_title">장보기</string>
    <string name="dialog_enter_item_name">상품 이름: %s</string>
    <string name="dialog_enter_item_count">갯수</string>
    <string name="dialog_enter_price">가격</string>
    <string name="dialog_buy_not_valid">유효한 값이 아닙니다.</string>
    <string name="main_tab_1">카트추가</string>
    <string name="main_tab_2">쇼핑카트</string>
    <string name="main_tab_3">히스토리</string>
    <string name="add">추가</string>
</resources>
