<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="horizontal"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <!-- 타이틀 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/dialog_edit_title"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />
        </LinearLayout>

        <!-- 내용 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dialog_edit_name"
                android:textColor="@color/textPrimary" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/textPrimary"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtClose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/textSecondary"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtDone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>